1. Users now see only those comments' actions which they can perform 2. Instructost now can pin/unpin comments and mark replies them as a correct answer 3. Ordinar user now can't see not-aproved comments unless it's published by him 4. Instructors and course admins now can change course policy on /Unit/Comments 5. Reply form's are shown regard comment policy 6. Instructors' replies are approving and marking as correct automatically 7. User can remove his comments and replies

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -467,6 +467,11 @@ li.li-success {
     margin: 0;
 }
 
+.comments .comment .comment__header,
+.comments .comment .comment__footer {
+	font-size: 10pt;
+}
+
 .comments .comment .comment__header > div,
 .comments .comment .comment__footer > div {
     display: inline-block;
@@ -482,7 +487,7 @@ li.li-success {
 	text-decoration: none;	
 }
 
-.comments .comment .comment__not-approved {
+.comments .comment .label {
 	font-size: 7pt;
 	vertical-align: middle;
 }
@@ -508,7 +513,6 @@ li.li-success {
 }
 
 .comments .comment .comment__publish-time {
-    font-size: 10pt;
     color: #bbb;
 }
 
@@ -563,4 +567,37 @@ li.li-success {
 .comments .comment:not(.is-reply):not(:nth-child(2)) {
     border-top: 1px solid rgba(200, 200, 200, 0.5);
     padding-top: 15px;
+}
+
+.comments .comment.is-pinned .comment__footer .comment__pin-link {
+	display: none;
+}
+
+.comments .comment:not(.is-pinned) .comment__footer .comment__unpin-link {
+	display: none;
+}
+
+.comments .comment .comment__header .comment__pinned,
+.comments .comment .comment__header .comment__correct-answer,
+.comments .comment.not-approved .comment__footer .comment__pin-link,
+.comments .comment.not-approved .comment__footer .comment__mark-as-correct-link,
+.comments .comment.is-correct-answer .comment__footer .comment__mark-as-correct-link {
+	display: none;
+}
+
+.comments .comment.is-pinned .comment__header .comment__pinned,
+.comments .comment.is-correct-answer .comment__header .comment__correct-answer {
+	display: initial;
+}
+
+.comments .comment .comment__footer .comment__mark-as-correct-link * {
+	color: #8b0000;
+}
+
+.comments .comment .comment__correct-answer .comment__mark-as-correct-link {
+	margin-left: 3px;
+}
+
+.comments .comment .comment__correct-answer .comment__mark-as-correct-link * {
+	color: inherit;
 }
