--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -29,7 +29,7 @@
 				}
 				else
 				{
-					@Html.DisplayFor(m => blocks)
+					@SlideHtml.Blocks(blocks, Model.BlockRenderContext)
 				}
 				@if (Model.Slide is ExerciseSlide)
 				{
