--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -455,16 +455,15 @@ li.li-success {
 
 .comments .comment.is-reply,
 .comments .reply-form.is-reply {
-    margin-left: 68px;
+	margin-left: 68px;
 }
 
 .comments .comment .comment__author-avatar {
-    margin-right: 2px;
-    border-radius: 2px;
+	margin-right: 2px;
 }
 
 .comments .comment .comment__header {
-    margin: 0;
+	margin: 0;
 }
 
 .comments .comment .comment__header,
@@ -485,7 +484,7 @@ li.li-success {
 
 .comments .comment .comment__header > div,
 .comments .comment .comment__footer > div {
-    display: inline-block;
+	display: inline-block;
 }
 
 .comments .comment .comment__header .comment__not-approved {
@@ -528,9 +527,9 @@ li.li-success {
 
 
 .comments .comment .comment__author-name {
-    font-size: 10pt;
-    font-weight: bold;
-    color: #060;
+	font-size: 10pt;
+	font-weight: bold;
+	color: #060;
 }
 
 .comments .comment .comment__footer > :not(:first-child) {
@@ -538,20 +537,20 @@ li.li-success {
 }
 
 .comments .comment .comment__publish-time {
-    color: #bbb;
+	color: #bbb;
 }
 
 .comments .comment .comment__likes-count {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .comments .comment .comment__likes-count:hover {
-    color: #900;
+	color: #900;
 }
 
 .comments .comment .comment__likes-count .glyphicon {
-    color: #888;
-    font-size: 10pt;
+	color: #888;
+	font-size: 10pt;
 }
 
 .comments .comment .comment__likes-count.is-liked .glyphicon {
@@ -559,48 +558,46 @@ li.li-success {
 }
 
 .comments .comment .comment__likes-count:not(.is-liked):hover .glyphicon {
-    color: #700;
+	color: #700;
 }
 
 .comments .reply-form [name=commentText] {
-    height: 24px;
-    margin-left: 7px;
-    padding: 1px 5px;
-    outline: none;
+	height: 24px;
+	margin-left: 7px;
+	padding: 1px 5px;
+	outline: none;
+	max-width: none;
+	width: 100%;
 }
 
 .comments .reply-form textarea[name=commentText] {
-    height: 60px;
-    padding-left: 6px;
-    padding-top: 1px;
+	height: 60px;
+	padding-left: 6px;
+	padding-top: 1px;
 }
 
-.comments .reply-form:not(.is-reply) [name=commentText] {
-    min-width: 828px;
-}
-
-.comments .reply-form.is-reply [name=commentText] {
-    min-width: 760px;
+.comments .reply-form .media-body {
+	padding-right: 7px;
 }
 
 .comments .reply-form .reply-form__send-button {
-    margin-left: 7px;
-    margin-top: 7px;
-    display: block;
+	margin-left: 7px;
+	margin-top: 7px;
+	display: block;
 }
 
 .comments .comment:not(.is-reply):not(:nth-child(2)) {
-    border-top: 1px solid rgba(200, 200, 200, 0.5);
-    padding-top: 15px;
+	border-top: 1px solid rgba(200, 200, 200, 0.5);
+	padding-top: 15px;
 }
 
 .comments .comment .comment__new-text {
-    display: block;
-    width: 100%;
-    max-width: none;
-    padding-top: 1px;
-    padding-left: 6px;
-    margin: 5px 0;
+	display: block;
+	width: 100%;
+	max-width: none;
+	padding-top: 1px;
+	padding-left: 6px;
+	margin: 5px 0;
 }
 
 .comments .comment.is-pinned .comment__footer .comment__pin-link,
@@ -632,7 +629,7 @@ li.li-success {
 	border: 1px solid rgba(66, 139, 202, 0.52);
 	color: #428bca;
 	color: rgba(66, 139, 202, 0.58);
-    background-color: white;
+	background-color: white;
 }
 
 .comments .comment:not(.is-correct-answer) .label-switcher.comment__correct-answer .glyphicon-remove {
@@ -645,7 +642,7 @@ li.li-success {
 	border: 1px solid rgba(92,184,92,0.58);
 	color: #5cb85c;
 	color: rgba(92,184,92,0.58);
-    background-color: white;
+	background-color: white;
 }
 
 .comments .comment:not(.is-pinned) .label-switcher.comment__pinned * {
@@ -678,4 +675,38 @@ li.li-success {
 
 .comments .comment:not(.is-pinned) .comment__header .show__if_pinned {
 	display: none;
+}
+
+
+.comments_policy__message {
+	margin-top: 15px;
+	background-color: rgba(255, 0, 0, 0.13);
+	padding: 7px 12px;
+	border-radius: 5px;
+	color: #500F0F;
+}
+
+/* User avatars */
+.user__avatar {
+	width: 54px;
+	height: 54px;
+	display: inline-block;
+	border-radius: 4px;
+}
+
+.user__avatar.small {
+	width: 24px;
+	height: 24px;
+}
+
+.user__avatar.user__avatar__placeholder {
+	color: white;
+	font-size: 25pt;
+	text-align: center;
+	padding-top: 5px;
+}
+
+.user__avatar.user__avatar__placeholder.small {
+	font-size: 12pt;
+	padding-top: 2px;
 }
