1. Comments feed in admin course controller 2. Get user's slide by id, not only by index 3.

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -330,7 +330,7 @@
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: 100%;is-
 	}
 
 .unit-statistic-ref {
@@ -453,8 +453,8 @@ li.li-success {
 	margin-top: 15px;
 }
 
-.comments .comment.is-reply,
-.comments .reply-form.is-reply {
+.comments:not(.comments__feed) .comment.is-reply,
+.comments:not(.comments__feed) .reply-form.is-reply {
 	margin-left: 68px;
 }
 
@@ -536,7 +536,8 @@ li.li-success {
 	padding-left: 10px;
 }
 
-.comments .comment .comment__publish-time {
+.comments .comment .comment__publish-time,
+.comments .comment .comment__publish-time a {
 	color: #bbb;
 }
 
@@ -594,7 +595,8 @@ li.li-success {
 	color: #B15252;
 }
 
-.comments .comment:not(.is-reply):not(:nth-child(2)) {
+.comments .comment:not(.is-reply):not(:nth-child(2)),
+.comments.comments__feed .comment:not(:nth-child(2)) {
 	border-top: 1px solid rgba(200, 200, 200, 0.5);
 	padding-top: 15px;
 }
