--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -84,6 +84,9 @@
 		</script>
 		<script> refreshPreviousDraft('@(data.LatestAcceptedSolution != null)', '@e.Id') </script>
 	}
+
+
+	<script src="~/Scripts/jquery.color-2.1.0.min.js"></script>
 }
 
 @helper GetScore(Tuple<int, int> score)
