1. Sidebar is max-widthed to 350px 2. Show context information about comment in admin panel

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -163,7 +163,7 @@
 	}
 /* ReSharper restore Html.CssClassElementsNotFound */
 .side-bar {
-	width: 350px;
+	max-width: 350px;
 	margin: 0;
 	padding-top: 20px;
 	max-height: none !important;
