Remove App_Code

--- a/src/uLearn.Web/Views/Comments/SlideComments.cshtml
+++ b/src/uLearn.Web/Views/Comments/SlideComments.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNet.Identity
 @using uLearn
 @using uLearn.Web.Controllers
+@using uLearn.Web.Views.Shared
 
 @model SlideCommentsModel
 
