--- a/src/uLearn.Web/Views/Comments/_Comment.cshtml
+++ b/src/uLearn.Web/Views/Comments/_Comment.cshtml
@@ -1,4 +1,5 @@
-﻿@model CommentViewModel
+﻿@using uLearn.Web.Views.Shared
+@model CommentViewModel
 
 @helper ReplyForm(Comment comment, bool isFormHidden)
 {
